change a little bit

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -46,7 +46,7 @@
 	<div class="row border-div">
 
 	  <div class="col-xs-6">
-	  	<h1>Tennis at Northwestern {{ Activity }}</h1>
+	  	<h1>{{ activity_name }}</h1>
 	  	<img class="act-logo" src="http://livingstontownship.org/sylsprograms/wp-content/uploads/2013/07/tennis-logo.jpg">
 	  	<h3>Intermediate</h3>
 	  </div>
