--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -29,10 +29,27 @@
 			<div class="modal-header">
 				<h4 class=modal-title>Participants</h4>
 				<div class="modal-body">
-					<ul>
-						<li>Greg Chan</li>
-						<li>Salil Gupta</li>
-					</ul>
+					<table class='table'>
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Age</th>
+								<th>Gender</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Salil Gupta</td>
+								<td>21</td>
+								<td>M</td>
+							</tr>
+							<tr>
+								<td>Greg Chan</td>
+								<td>20</td>
+								<td>M</td>
+							</tr>
+						</tbody>
+					</table>
 					<div class="pull-right">
 						<button type="button" class="btn btn-default close-btn" data-dismiss="modal">Close</button>
 					</div>
@@ -54,6 +71,7 @@
 	  <div class="col-xs-6">
 	  	<h3><span>5/9/14</span> at <span>4PM</span></h3>
 	  	<h3><span>1927 Orrington Ave</span><br><span>Evanston, IL 60201</span></h3>
+	  	<h3><span>Weather: Sunny</span></h3>
 	  	<button class="btn" id="enroll-btn" data-toggle="modal" data-target="#enroll-modal">Enroll</button>
 
 	  </div>
