Add the send email to avtivity owner function

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -12,11 +12,10 @@
 			<div class="modal-header">
 				<h4 class=modal-title>Participants</h4>
 				<div class="modal-body">
-					The owner of this activity has been notified of your enrollment.
+					Are you sure you want to enroll in this activity?
+						<a  class="btn btn-default" href = "{%url 'Activities:enroll'%}">Yes</a>
+						<button type="button" class="btn btn-default close-btn" data-dismiss="modal">No</button>
 					<br>
-					<div class="pull-right">
-						<button type="button" class="btn btn-default close-btn" data-dismiss="modal">Close</button>
-					</div>
 				</div>
 			</div>
 		</div>
