--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -13,8 +13,10 @@
 				<h4 class=modal-title>Participants</h4>
 				<div class="modal-body">
 					Are you sure you want to enroll in this activity?
+					<div>
 						<a  class="btn btn-default" href = "{%url 'Activities:enroll'%}">Yes</a>
-						<button type="button" class="btn btn-default close-btn" data-dismiss="modal">No</button>
+						<a  class="btn btn-default" href = "">No </a>
+					</div>
 					<br>
 				</div>
 			</div>
