added city to the db

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -83,7 +83,7 @@
 
 	  <div class="col-xs-6">
 	  	<h3><span>{{date}}</span> at <span>{{ start_time }}</span></h3>
-	  	<h3><span>{{ address }}</span><br><span>{{ state }} {{ zipcode }}</span></h3>
+	  	<h3><span>{{ address }}</span><br><span>{{city}}, {{ state }} {{ zipcode }}</span></h3>
 	  	<h3><span>Weather: Sunny</span></h3>
 	  	<button class="btn" id="enroll-btn" data-toggle="modal" data-target="#enroll-modal">Enroll</button>
 
