--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -12,10 +12,10 @@
 			<div class="modal-header">
 				<h4 class=modal-title>Participants</h4>
 				<div class="modal-body">
-					Are you sure you want to enroll in this activity?
+					<p >Are you sure you want to enroll in this activity?</p>
 					<div>
 						<a  class="btn btn-default" href = "{%url 'Activities:enroll'%}">Yes</a>
-						<a  class="btn btn-default" href = "">No </a>
+						<a  class="btn btn-default" data-dismiss="modal">No </a>
 					</div>
 					<br>
 				</div>
