--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -12,7 +12,7 @@
 
 <!-- styles -->
 <!--link type="text/css" rel="stylesheet" href="/static/css/bootstrap-theme-3.0.0.min.css" /-->
-<link rel='stylesheet' type='text/css' href = "{%static "css/bootstrap.css"%}"/>
+<link rel='stylesheet' type='text/css' href = "{%static "css/bootstrap.min.css"%}"/>
 <link rel='stylesheet' type='text/css' href = "{%static "Onthemove/css/base.css"%}"/>
 {%block cssfiles%}{%endblock%}
 <!-- /styles -->
