start to create location form

--- a/Activities/templates/Activities/createActivity.html
+++ b/Activities/templates/Activities/createActivity.html
@@ -13,6 +13,9 @@
 		{{create_form.activity_name.label_tag}}
 		{{create_form.activity_name}}
 
+		{{create_form.location_name.label_tag}}
+		{{create_form.location_name}}
+
 		{{create_form.start_time.label_tag}}
 		{{create_form.start_time}}
 
