--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -34,6 +34,12 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">On the Move</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav pull-right">
+            <li><a href=#>Signup</a></li>
+            <li><a href=#>Login</a></li>
+          </ul>
+        </div>
       </div>
 
     </div>
