--- a/Onthemove/static/Onthemove/css/base.css
+++ b/Onthemove/static/Onthemove/css/base.css
@@ -92,8 +92,8 @@ body {
   height:475px;
 }
 
-a, a:hover {
-  color: white;
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:hover {
+  color:white;
 }
 
 /* Main elements end */
