--- a/Onthemove/static/Onthemove/css/base.css
+++ b/Onthemove/static/Onthemove/css/base.css
@@ -92,6 +92,15 @@ body {
   height:475px;
 }
 
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.btn-default{
+   float: right;
+   margin-right: 2px;
+}
+
 /* Main elements end */
 
 
