creating an activity works yay

--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -36,7 +36,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="/activities/choose_location">Create Event</a></li>
+            <li><a href="/activities/choose_location">Create Activity</a></li>
           </ul>
         </div>
       </div>
