--- a/Activities/templates/Activities/createActivity.html
+++ b/Activities/templates/Activities/createActivity.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{%static "Activities/css/default.time.css"%}">
 {%endblock%}
 {%block content%}
-<form role="form" method="POST" action = "{%url 'Activities:create_Activity'%}">{%csrf_token%}
+<form role="form" method="POST" action = "{%url 'Activities:create_Activity' id%}">{%csrf_token%}
 	<h1>Create an Activity</h1>
 	<div class="form-group">
 		{{create_form.activity_name.label_tag}}
