fixed navbar and buttons

--- a/Activities/templates/Activities/createLocation.html
+++ b/Activities/templates/Activities/createLocation.html
@@ -24,7 +24,7 @@
 		{{create_form.location_rate}}
 
 	</div>
-	<input type = 'submit' value = "Next"/>
+	<input class="btn btn-default" type = 'submit' value = "Next"/>
 </form>
 
 {%endblock%}
