--- a/Activities/templates/Activities/createActivity.html
+++ b/Activities/templates/Activities/createActivity.html
@@ -32,7 +32,7 @@
 		{{create_form.skill_level}}
 
 	</div>
-	<input type = 'submit' value = "Create"/>
+	<input class="btn btn-default" type = 'submit' value = "Create"/>
 </form>
 
 {%endblock%}
