--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -21,6 +21,7 @@
 <!-- scripts -->
 <script src = "{%static "js/jquery-1.11.0.js"%}"></script>
 <script src = "{%static "js/bootstrap.min.js"%}"></script>
+<script src = "http://code.jquery.com/jquery-latest.min.js"></script>
 <!-- /scripts -->
 </head>
 <body>
@@ -29,17 +30,24 @@
   <div id="wrap">
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="/">On the Move</a>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav pull-right">
+
+        <nav class="collapse navbar-collapse" id="btn-navbar-collapse" role="navigation">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href="/activities/choose_location">Create Activity</a></li>
           </ul>
         </div>
-      </div>
+      </nav>
 
     </div>
 
@@ -65,6 +73,7 @@
   <script>window.jQuery || document.write('<script src="/static/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
   <script defer src="/static/js/libs/bootstrap-3.0.0.min.js"></script-->
   {%block jsfiles%}
+
   {%endblock%}
 
 </body>
