--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -44,7 +44,7 @@
 
         <nav class="collapse navbar-collapse" id="btn-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/activities/choose_location">Create Activity</a></li>
+            <li><a href="{%url 'Activities:create_Location'%}">Create Activity</a></li>
           </ul>
         </div>
       </nav>
@@ -69,9 +69,6 @@
     </div>
   </div>
 
-  <!--script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/static/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-  <script defer src="/static/js/libs/bootstrap-3.0.0.min.js"></script-->
   {%block jsfiles%}
 
   {%endblock%}
