--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -7,7 +7,7 @@
 <!-- meta -->
 <meta name="description" content="">
 <meta name="author" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1 user-scalable=no">
 <!-- /meta -->
 
 <!-- styles -->
@@ -21,7 +21,6 @@
 <!-- scripts -->
 <script src = "{%static "js/jquery-1.11.0.js"%}"></script>
 <script src = "{%static "js/bootstrap.min.js"%}"></script>
-<script src = "http://code.jquery.com/jquery-latest.min.js"></script>
 <!-- /scripts -->
 </head>
 <body>
