--- a/Onthemove/templates/Onthemove/index.html
+++ b/Onthemove/templates/Onthemove/index.html
@@ -66,7 +66,7 @@
   function checkLoginState() {
     FB.getLoginStatus(function(response) {
       statusChangeCallback(response);
-    });
+    }, {scope: 'age_range,user_birthday'});
   }
 
   window.fbAsyncInit = function() {
