put all of create activity on one page

--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -43,7 +43,7 @@
 
         <nav class="collapse navbar-collapse" id="btn-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{%url 'Activities:create_Location'%}">Create Activity</a></li>
+            <li><a href="{%url 'Activities:create_Activity'%}">Create Activity</a></li>
           </ul>
         </div>
       </nav>
