added user login logout

--- a/Users/templates/Users/createUser.html
+++ b/Users/templates/Users/createUser.html
@@ -5,7 +5,7 @@
 {%endblock%}
 {%block content%}
 <form role="form" method="POST" action = "{%url 'Users:create_user'%}">{%csrf_token%}
-	<h1>Create an account</h1>
+	<h1>Register</h1>
 	{% for field in userForm %}
 	<div class = 'form-group'>
 		<div>{{field.errors|striptags}}</div>
