--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -4,6 +4,10 @@
 {%block cssfiles%}
 <link rel='stylesheet' type='text/css' href = "{%static "Activities/css/activityPage.css"%}"/>
 {%endblock%}
+{%block attendees%}
+	
+{%endblock%}
+
 {% block content %}
 
 <ul class="list-group" id='enroll-list-group' style ='display:none;'>
@@ -122,6 +126,7 @@
 {%block jsfiles%}
 	<script src = "{%static "js/jquery.cookie.js"%}"></script>
 	<script src = "{%static "Activities/js/Activities.js"%}"></script>
+	<script src = "{%static ""}"></script>
 	<script>
 		var csrf = $.cookie('csrftoken');
 		Activities.init();
