--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -103,15 +103,19 @@
 	  	<h3><span>{{date}}</span> at <span>{{ start_time }}</span></h3>
 	  	<h3><span>{{ address }}</span><br><span>{{city}}, {{ state }} {{ zipcode }}</span></h3>
 	  	<h3><span>Weather: Sunny</span></h3>
-	  	{%if user.is_authenticated and is_max_out%}
-	  	<p>Sorry this activity is full!</p>
-	  	{%elif user.is_authenticated and is_enrolled%}
-	  	<p>You're already enrolled</p>
-	  	{%elif user.is_authenticated and is_owner%}
-	  	<p>You're the organizer</p>
-	  	{%elif user.is_authenticated%}
-	  	<button class="btn" id="enroll-btn" data-toggle="modal" data-target="#enroll-modal">Enroll</button>
-	  	{%endif%}
+	  	<div id='enrollStatus'>
+		  	{%if user.is_authenticated and is_max_out%}
+		  	<p>Sorry this activity is full!</p>
+		  	{%elif user.is_authenticated and is_enrolled%}
+		  	<p>You're already enrolled</p>
+		  	{%elif user.is_authenticated and is_owner%}
+		  	<p>You're the organizer</p>
+		  	{%elif user.is_authenticated and is_pending%}
+		  	<p>You're enrollment is pending!</p>
+		  	{%elif user.is_authenticated%}
+		  	<button class="btn" id="enroll-btn" data-toggle="modal" data-target="#enroll-modal">Enroll</button>
+		  	{%endif%}
+	  	</div>
 	  </div>
 	</div>
 
