--- a/Users/templates/Users/login.html
+++ b/Users/templates/Users/login.html
@@ -2,8 +2,16 @@
 {%load staticfiles%}
 {%block title%}Choose Location{%endblock%}
 {%block cssfiles%}
+<style>
+.error{
+  color:red;
+  font-weight: bold;
+  list-style-type:none; 
+}
+</style>
 {%endblock%}
 {%block content%}
+<p class='error'> {{form.non_field_errors}} </p>
 <form role='form' action="{%url 'Users:login' %}" method='POST'>	{%csrf_token%}
 	{% for field in form %}
 	<div class = 'form-group'>
