--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -45,8 +45,8 @@
           <ul class="nav navbar-nav navbar-right">
             {%if user.is_authenticated%}
             <li><a href="{%url 'Activities:create_Activity'%}">Create Activity</a></li>
-            <li><a href="#">My Profile</a></li>
-            <li><a href="#">My Activities</a></li>
+            <!--li><a href="#">My Profile</a></li>
+            <li><a href="#">My Activities</a></li-->
             <li><a href="{%url 'Users:logout'%}">Logout</a></li>
             {%else%}
             <li><a href="{%url 'Users:login'%}">Login</a></li>
