add rating to details page

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -148,6 +148,7 @@
 			<span class="fa icon-star rating"></span>
 			<span class="fa icon-star rating"></span>
 			<span class="fa icon-star-empty rating"></span>
+			{{ rating }}
 		</div>
 		<div class="img-div">
 			<img class="loc-img" src="http://fitrec.mccormick.northwestern.edu/wordpress/http://fitrec.mccormick.northwestern.edu/wordpress/wp-content/uploads/2010/07/CombeTennisCourts450x300.jpg">
