--- a/Onthemove/static/Onthemove/css/base.css
+++ b/Onthemove/static/Onthemove/css/base.css
@@ -154,6 +154,15 @@ body {
   color:#FFFFFF;
 }
 
+#user-log{
+  padding-top:15px;
+  font-size: 12px;
+  color:#FFFFFF;
+/*  text-decoration: none;
+  padding-left: 10px;
+  padding-right:10px;*/
+}
+
 /* Main elements end */
 
 
