--- a/Onthemove/templates/Onthemove/index.html
+++ b/Onthemove/templates/Onthemove/index.html
@@ -6,6 +6,15 @@
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
+
+<!-- <div class="alert alert-success">
+	<div id = "use-log">
+		{%if user.is_authenticated%}
+		Hi, {{ user.first_name}}
+		{%endif%}
+	</div>
+</div> -->
+
 <div id="status">
 </div>
 <div id="googleMap"></div>
