removed footer and removed enroll btn

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -154,11 +154,11 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="text-center">
 			<button class="btn btn-lg clear-btn-white" data-toggle="modal" data-target="#user-modal">Participants</button>
 		</div>
-	</div>
+	</div> -->
 </div>
 
 {% endblock %}
