--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -110,12 +110,12 @@
 
 </div>
 
-  <div id="footer">
+  <!-- <div id="footer">
     <div class="container text-center">
       <p>On the Move - Northwestern University - EECS 394</p>
       {% block footer %}{% endblock %}
     </div>
-  </div>
+  </div> -->
 
   {%block jsfiles%}
 
