--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -75,11 +75,11 @@
         <a class = "col-xs-1 ava-btn" href = "#my-right-menu" id = "attendee">
           <span class = "glyphicon glyphicon-user"></span>
         </a>
-        <div id = "user-log" style="float:right;">
+        <!-- <div id = "user-log" style="float:right;">
           {%if user.is_authenticated%}
             <p>Hi {{ user.first_name}}</p>
           {%endif%}
-        </div>
+        </div> -->
       </div>
 
       <nav id="my-left-menu">
