changed the title to Register

--- a/Users/templates/Users/createUser.html
+++ b/Users/templates/Users/createUser.html
@@ -1,6 +1,6 @@
 {%extends "Onthemove/base.html"%}
 {%load staticfiles%}
-{%block title%}Choose Location{%endblock%}
+{%block title%}Register{%endblock%}
 {%block cssfiles%}
 {%endblock%}
 {%block content%}
