--- a/Activities/templates/Activities/enrollEmail.html
+++ b/Activities/templates/Activities/enrollEmail.html
@@ -3,6 +3,6 @@
 </div>
 <div>
 	<p>{{userName}} has requested to join your activity {{activity_name}}.</p>
-	<p>To view and add {{userName}} to your activity click the link below."</p>
+	<p>To view and add {{userName}} to your activity click the link below.</p>
 	{{ protocol }}://{{ domain }}{% url 'Activities:addUser' activity_id=aid user_id=uid %}
 </div>
