pull yelp images for faciltiies

--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -93,7 +93,7 @@
 			<span>Facility Rating: {{ rating }}</span>
 		</div>
 		<div class="img-div">
-			<img class="loc-img" src="http://fitrec.mccormick.northwestern.edu/wordpress/http://fitrec.mccormick.northwestern.edu/wordpress/wp-content/uploads/2010/07/CombeTennisCourts450x300.jpg">
+			<img class="loc-img" src={{ img_url }}>
 		</div>
 	</div>
 </div>
