--- a/Activities/static/Activities/css/activityPage.css
+++ b/Activities/static/Activities/css/activityPage.css
@@ -59,6 +59,11 @@
 	border-style: solid;
 }
 
+.profile-picture{
+	width:30px;
+	height:30px;
+}
+
 #enroll-btn {
 	background-color: #8EBBB4;
 	border-radius: 0;
