--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -85,12 +85,7 @@
 	<div class="row border-div loc-div">
 		<h1>{{ location_name }}</h1>
 		<div id="rating-div">
-			<span class="fa icon-star rating"></span>
-			<span class="fa icon-star rating"></span>
-			<span class="fa icon-star rating"></span>
-			<span class="fa icon-star rating"></span>
-			<span class="fa icon-star-empty rating"></span>
-			<span>Facility Rating: {{ rating }}</span>
+			
 		</div>
 		<div class="img-div">
 			<img class="loc-img" src={{ img_url }}>
@@ -105,5 +100,22 @@
 		var csrf = $.cookie('csrftoken');
 		Activities.init();
 		Activities.enroll({"csrfmiddlewaretoken":csrf},"{{path}}");
+		
+		var rating = {{ rating }};
+		for (var i=0; i < Math.floor(rating); i++){
+			$('#rating-div').append('<span class="glyphicon glyphicon-star rating"></span>');
+		}
+
+		var remaining = 5 - rating;
+		// if(remaining%1 != 0){
+		// 	('#rating-div').append('<span class="glyphicon glyphicon-star rating"></span>');
+		// 	remaining = remaining - 1;
+		// }
+
+		if(remaining>0){
+			for (var j = 0; j < remaining; j++) {
+				$('#rating-div').append('<span class="glyphicon glyphicon-star-empty rating"></span>');
+			};
+		}
 	</script>
 {%endblock%}
