--- a/Onthemove/templates/Onthemove/base.html
+++ b/Onthemove/templates/Onthemove/base.html
@@ -15,6 +15,7 @@
 <link rel='stylesheet' type='text/css' href = "{%static "css/bootstrap.min.css"%}"/>
 <link rel='stylesheet' type='text/css' href = "{%static "Onthemove/css/base.css"%}"/>
 <link rel='stylesheet' type='text/css' href = "{%static "Onthemove/css/jquery.mmenu.all.css"%}"/>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 
 {%block cssfiles%}{%endblock%}
 <!-- /styles -->
@@ -24,6 +25,7 @@
 <script src = "{%static "js/jquery-1.11.0.js"%}"></script>
 <script src = "{%static "js/bootstrap.min.js"%}"></script>
 <script src = "{%static "Onthemove/js/jquery.mmenu.min.all.js"%}"></script>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
 <!-- /scripts -->
 </head>
