--- a/Activities/templates/Activities/details.html
+++ b/Activities/templates/Activities/details.html
@@ -16,7 +16,7 @@
 		    <li>
       			<a>
       				<div>
-      					<img class = "profile-picture" src = "{% static "" %}{{ owner.img }}"/>
+      					<img class = "profile-picture" src = "{%static "img/person_placeholder.png"%}"/>
       					{{owner.user.first_name}} {{owner.user.last_name}} (Organizer)
       				</div>
       			</a>
@@ -25,7 +25,7 @@
 				<li>
 					<a>
 						<div>
-							<img class = "profile-picture" src = "{% static "" %}{{ participant.img }}"/>
+							<img class = "profile-picture" src = "{%static "img/person_placeholder.png"%}"/>
 							{{ participant.user.first_name }} {{ participant.user.last_name }}
 						</div>
 					</a>
